external-crates/move/crates/move-package-alt/tests/data/non_string_local_dep_path/Move@parsed.snap
---
source: crates/move-package-alt/tests/test_runner.rs
---
error: Error while loading `"tests/data/non_string_local_dep_path/Move.toml"`
  ┌─ "tests/data/non_string_local_dep_path/Move.toml":6:5
  │
6 │ A = { local = 1 }
  │     ^^^^^^^^^^^^^
  │
  = invalid type: integer `1`, expected path string for key `local`
